Curriculum swagger agregado
